# yt-dlp-server

./: Cargo.toml  Download media on the Apple TV.shortcut  Download media on the TV.shortcut  README.md  Subscribe to channel on the TV.shortcut  launched.yt-dlp-server.plist
html/: index.html
src/: main.rs
templates/: base.html  downloads.html  subscriptions.html
