[package]
name = "yt-dlp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = "0.6.1"
clap = { version = "4.0.29", features = ["derive"] }
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.151", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
