[package]
name = "yt-dlp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = {version = "0.6.1", features = ["ws"] }
clap = { version = "4.0.29", features = ["derive"] }
futures = "0.3.25"
mime = "0.3.16"
once_cell = "1.17.0"
regex = "1.7.1"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
url = "2.3.1"
