[package]
name = "yt-dlp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
askama = "0.12.0"
askama_axum = "0.3.0"
axum = { version = "0.6.12", features = ["ws"] }
chrono = { version = "0.4.24", features = ["serde"] }
clap = { version = "4.0.29", features = ["derive"] }
crossbeam-channel = "0.5.8"
feed-rs = "1.3"
futures = "0.3.25"
heed = "0.20.0-alpha.9"
humantime = "2.1.0"
mime = "0.3.16"
once_cell = "1.17.0"
regex = "1.7.3"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "cookies",
    "rustls-tls",
] }
scraper = "0.16.0"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.91"
serde_regex = "1.1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
ureq = { version = "2.6.2", features = ["json"] }
url = "2.3.1"
